[package]
name = "poe_core"
version = "0.1.0"
authors = ["Nick Wanninger <nickwanninger@gmail.com>"]
edition = "2018"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3.1", features = ["rt-multi-thread", "io-util", "io-std", "net", "macros", "sync"] }
clap = "2.33.3"
serde = { version = "1.0.63", features = ["derive"] }
bincode = "1.3.1"
futures = "0.3.7"
log = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
lru = "0.6.0"
itertools = "0.9.0"
tokio-rustls = "0.20.0"
rustls = "0.18.1"

webpki = "0.21.3"
glium = { version = "0.27", default-features = true }
imgui = "0.5.0"
imgui-glium-renderer = "0.5.0"
imgui-winit-support = "0.5.0"
